Thu Jan  8 17:56:09 PST 1998 Manish Singh <yosh@gimp.org>

	* glib/gscanner.c
	* gtk/gtclist.c
	* config.h.in
	* configure.in: added test for inline and put the inline keywords
	back in

	* gtk/gtklabel.c: made the prototypes match the definitions

	* gtk/fnmatch.c: minor change to make sure the right config.h
	gets included
	
1998-01-07  Elliot Lee  <sopwith@localhost.cs.cuc.edu>

	* gtk/gtkcombobox.c gtk/gtkcombobox.h: New widget, GtkComboBox
	* gdk/gdkwindow.c: Make gdk_window_init set the width &
		height of gdk_root_parent

Wed Jan  7 18:06:17 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkentry.c:
	* gtk/gtkentry.h: applied patch to use a backing pixmap for
	drawing, which removes the bad flickering. (gtk-wille-980106-0)

Wed Jan  7 02:14:30 PST 1998 Manish Singh <yosh@gimp.org>

	* glib/glib.h
	* glib/glist.c
	* glib/gslist.c
	* glib/testglib.c: Added g_[s]list_insert_sorted function
	and appropriate tests in testglib

Tue Jan  6 17:07:29 1998  Owen Taylor  <owt1@cornell.edu>
	* gtk/gtkentry.c gtk/gtkentry.h gtk/testgtk.c : 
	   Fixed problem with deleting while text is selected.
	   Changed behavior so that motion keys remove selection.
	   Added new gtk_entry_select_region () call.

Sat Jan  3 20:23:25 1998  Owen Taylor  <owt1@cornell.edu>
	* glib/glib.h: Changed guint32 -> guint for bitfields. 
	  (Bitfields must be int or unsigned int?)

Sat Jan  3 15:39:45 PST 1998 Jay Painter <jpaint@serv.net>
	* gtk/testgtk.c: better CList test

Sat Jan  3 11:09:51 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* gtk/gtkscrolledwindow.c: initialize scrollbar_spacing
	  (gtk-fortier-980103-0)

Sat Jan  3 10:15:08 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* configure.in: fixed a typo (no_xext_lib, not no_ext_lib).

Sat Jan  3 00:41:28 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkentry.c:
	* gtk/gtkentry.h: applied Gordon Matzigkeit's patch to add
	fixed-length entry fields (gtk_entry_new_with_max_length)
	